# Oncology-irAE-Detection

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  api_server.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  linters.toml
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  main.py
app/pages/: home.py  results.py
app/views/: __init__.py  about.py  architecture.py  assessment.py  home.py  impact.py  results.py  sample_cases.py  statistics.py  technical.py
config/: settings.py
docs/: AI_EXPERT_REVIEW.md  HACKATHON_VIDEO_SCRIPT.md  IMPACT_ANALYSIS.md  MODEL_EVALUATION.md  PROJECT_WRITEUP.md  PROJECT_WRITEUP_EXECUTIVE.md  TECHNICAL_DOCUMENTATION.md  TECHNICAL_FEASIBILITY.md
fine_tuning/: README.md  finetune_medgemma.py  requirements-finetune.txt  training_data.jsonl  training_data.py  training_data_expanded.jsonl
logs/: accuracy_metrics.jsonl
src/: __init__.py
src/analyzers/: __init__.py  base.py  cardiac_analyzer.py  endocrine_analyzer.py  gi_analyzer.py  hematologic_analyzer.py  immunotherapy_detector.py  liver_analyzer.py  lung_analyzer.py  neuro_analyzer.py  renal_analyzer.py  skin_analyzer.py
src/api/: __init__.py  dependencies.py  routes.py  schemas.py
src/evaluation/: __init__.py  evaluation_framework.py
src/llm/: __init__.py  assessment_engine.py  client.py  prompts.py  prompts_backup.py  prompts_medgemma.py  prompts_v2.py
src/models/: __init__.py  assessment.py  patient.py
src/parsers/: __init__.py  lab_parser.py  medication_parser.py  note_parser.py  symptom_parser.py
src/utils/: __init__.py  accuracy_monitor.py  constants.py  formatting.py  logging_config.py
tests/: __init__.py  test_analyzers.py  test_api.py  test_assessment.py  test_clinical_cases.py  test_confidence_scoring.py  test_ctcae_grading.py  test_e2e_clinical_scenarios.py  test_parsers.py
